squashing toaster bugs

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,7 +17,7 @@
   padding: 2em 2em 70vh 2em;
   z-index: 1;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 3fr;
   grid-gap: 1em;
   justify-items: stretch;
   align-items: start;
@@ -34,7 +34,7 @@
 
 .main-body-right {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 1fr;
   grid-gap: 1em;
   justify-items: stretch;
